Add card definition.
Adds the card definition and the suits/values.

--- a/HoldemBattle/HoldemBattle/HoldemBattle.csproj
+++ b/HoldemBattle/HoldemBattle/HoldemBattle.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Card.cs" />
+    <Compile Include="GameLogic\CardRanking.cs" />
+    <Compile Include="Models\GameValues.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
