Add flush detection and more unit tests.
Added code to the hand ranking code to detect flushes. Also, added unit
tests for flush detection and unit tests around all the operator
overloads and methods defined on the Card class.

--- a/HoldemBattle/HoldemBattle.Test/HoldemBattle.Test.csproj
+++ b/HoldemBattle/HoldemBattle.Test/HoldemBattle.Test.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GameLogic\HandRanking.cs" />
+    <Compile Include="Models\Card.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
