Table and player related logic and tests.
Adding a Table class to control the flow of each game. Handles joining
and leaving by players including the monetary transactions involved,
also sets table stakes.
Added unit tests for previous and new work. Up to around 94% coverage.

--- a/HoldemBattle/HoldemBattle.Test/HoldemBattle.Test.csproj
+++ b/HoldemBattle/HoldemBattle.Test/HoldemBattle.Test.csproj
@@ -51,7 +51,10 @@
   </Choose>
   <ItemGroup>
     <Compile Include="GameLogic\HandRanking.cs" />
+    <Compile Include="GameLogic\StakeInfo.cs" />
+    <Compile Include="GameLogic\Table.cs" />
     <Compile Include="Models\Card.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
