--- a/HoldemBattle/HoldemBattle/HoldemBattle.csproj
+++ b/HoldemBattle/HoldemBattle/HoldemBattle.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Models\Card.cs" />
     <Compile Include="GameLogic\HandRanking.cs" />
     <Compile Include="Models\GameValues.cs" />
-    <Compile Include="Player.cs" />
+    <Compile Include="Models\Player.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
